--- a/index.html
+++ b/index.html
@@ -1,7 +1,87 @@
+<!DOCTYPE html>
+
 <html>
+
+<head>
+
+<meta charset="utf-8">
+
+<title>Study In Korea</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200;400;600;900&display=swap" rel="stylesheet">
+
+<style>
+
+
+h1,h2,section p,footer{background-color: white;}
+
+</style>
+
+<style type="text/css">
+
+ 
+
+html{font-family: 'Noto Serif KR', serif;}
+
+body,h1,h2,p{margin:0;}
+
+img{display:block;width: 100%}
+
+header,section,footer{width:800px;margin:auto;}
+
+header{height: 300px;font-size: 2em}
+
+h1{padding-top: 30px; }
+
+header{margin-bottom: 400px}
+
+section{margin-bottom: 300px}
+
+h2{margin-top: px; margin-bottom: 30px; font-size: 2em}
+
+section p{line-height: 1.5}
+
+footer{height: 200px; font-size: 0.5em}
+
+footer p{text-align: center;}
+
+p{margin-top: 20px}
+
+ 
+
+body{border:9px solid pink;
+
+ 
+
+ 
+
+ 
+
+</style>
+
+</head>
 
 <body>
 
-오늘 HTML 을 처음 시작해봤습니다~ 
-날씨가 좋습니다. 
 
+<header>
+
+<h1>Study in Korea <br>Why study in Korea? 
+
+</h1>
+
+</header>
+
+<section>
+
+<h2>1. Reasons</h2>
+  
+  <p>During the last ten years, Korea has become one of the most popular destinations for international students studying in Asia. It is attractive, trendy, and has a lot for a newcomer to indulge in and explore. 
+
+There are also a lot of practical factors that make studying in Korea a great choice: living costs are cheaper than in many other developed countries, the tuition fees are reasonable and affordable. With its economic and political upheaval, modernized Korea is famous for its good quality of education and a high standard of health care. It is a safe and secure country with good travel connections to neighboring countries. Trips to China, Japan, and the rest of Asia on weekends or holidays add more perspective to the experience of living and studying in Korea. </p>
+
+</section>
+
+<section>
+
+<h2>2. When and How to Apply University for foreigners ? </h2>
