--- a/index.html
+++ b/index.html
@@ -85,3 +85,116 @@ There are also a lot of practical factors that make studying in Korea a great ch
 <section>
 
 <h2>2. When and How to Apply University for foreigners ? </h2>
+ <img src="2.png">
+<p>Most universities recruit twice a year, 4 months prior to the commencement of the semester for university courses. Language course applications are usually more flexible, starting quarterly or even more frequently with simpler application procedures. There is no central admission authority in Korea, so each school set their own deadlines, which can be found on the school’s homepage.
+
+Korean Language Program application
+Application Procedures:
+
+1. Application submission deadline: 1-3 months prior to the start date
+
+2. Application screening
+
+3. Tuition fee payment
+
+4. Admission approval
+
+5. Visa application
+
+Example of Admission documents:
+
+1. Application form
+
+2. Passport copy and profile photo
+
+3. Bank statement  (US$ 9,000 or more)
+
+4. Diploma / degree copy of the highest level education
+
+5. A personal statement
+
+6. Proof of Foreign student insurance
+
+7. Application fee
+
+University program application
+Application Procedures:
+
+1. Application submission deadline: 4 - 5 months prior (October for Spring Semester, April for Fall Semester)
+
+2. Audition and Interview
+
+3. Admission result notification
+
+4. Tuition fee payment
+
+5. Letter of Admission Issuance
+
+6. Visa application
+
+Example of Admission documents:
+
+1. University application form
+
+2. Financial support documents including bank certificate, guarantee of finance
+
+3. Academic support documents
+
+1. Statement of purpose
+
+2. Official high school (highest level of education) diploma (translated and notarized)
+
+3. Official high school (highest level of education) transcript (translated and notarized)
+
+4. Original document for proof of language proficiency (English / Korean)
+
+4. Identification support document: passport copy, household registry certificate</p>
+
+</section>
+
+<section>
+
+<h2>3. Korea Language and TOPIK Test </h2>
+
+<img src="3.png">
+
+
+
+<p>TOPIK is a comprehensive Korean Language test including reading, writing and listening. The test is designed to measure the language ability of foreigners who speak Korean as a foreign language and want to use it for academic and professional purposes. There are three levels of the test, and two grades in each level, from Level 1 at the lowest to Level 6, the most advanced level.
+
+.</p>
+
+</section>
+
+<section>
+
+<h2>4. Part-time Jobs</h2>
+
+<img src="4.png">
+
+<p>To work part-time in Korea international students on a student visa must apply for a permission for certain extracurricular activity from the immigration service. Students in language courses cannot apply for it until after 6 months of study. Official approval from your school is necessary apply for the work permit.
+
+With a permit students are allowed to work up to 20 hours per week (30 hours per week on postgraduate programs). University students with TOPIK level 3 or above have an easier time finding jobs and they can work without limitation during school holidays.
+
+</p>
+
+</section>
+
+ 
+
+<section>
+
+<h2>5.Scholarships </h2>
+
+<img src="5.png">
+
+·  <p>Scholarships in universities: it is hard to get scholarships for language courses or study abroad semesters in Korea but many universities offer some kind of scholarship opportunities for international students attending their degree programs. These scholarships are usually based on academic performance. For example our partner Konkuk University offer scholarships based on your TOPIK-result on the first semester of their degree programs. You get a 30% tuition fee scholarship if you have achieved TOPIK level 3, and the scholarship increase with 10% for every higher TOPIK level, up to 60% of the tuition fee for TOPIK 6. From the second semester and onwards, they offer scholarships from 20% to 100% of the tuition fee to students with a GPA between 3 and 4 from their previous semester.
+
+· Scholarships from Korean government: for example Global Korea Scholarship (GKS) from the Ministry of Education is the most representative one. There are also other public entities and foundations providing scholarships to certain fields and certain countries of students. To name a few, Scholarship programs from the Ministry of Culture, Sports and Tourism, Scholarship programs from the Ministry of Foreign Affairs etc. 
+
+</p>
+
+</section>
+
+<section>
+
