--- a/index.html
+++ b/index.html
@@ -197,4 +197,36 @@ With a permit students are allowed to work up to 20 hours per week (30 hours per
 </section>
 
 <section>
+<h2>6. How to study in Korea? </h2>
 
+<img src="6.png">
+
+<p> 1.Find a suitable school in Korea. We recommend that you start by learning Korean language if you want to study in Korea for a longer period of time, even if you want to take a degree program that is primarily taught in English. Learning Korean is the key to enjoy and succeed in your life in Korea.
+
+2. Travel and arrive in Korea.
+
+3. Enjoy your studies in Korea. Be prepared for an initial culture shock. So stay calm and open minded, explore and enjoy!
+
+</p>
+
+
+</section>
+
+ 
+
+ 
+
+</main>
+
+<footer><p>
+
+20.09.20.<br> Wint
+
+</p>
+
+</footer>
+
+
+</body>
+
+</html>
