--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ section p{line-height: 1.5}
 
 footer{height: 200px; font-size: 0.5em}
 
-footer p{text-align: center;}
+footer p{text-align: right;}
 
 p{margin-top: 20px}
 
  
 
-body{border:30px solid pink;
+body{border:150px solid pink;
 
  
 
