--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ header{margin-bottom: 400px}
 
 section{margin-bottom: 300px}
 
-h2{margin-top: px; margin-bottom: 30px; font-size: 2em}
+h2{margin-top: 30px; margin-bottom: 30px; font-size: 2em}
 
 section p{line-height: 1.5}
 
@@ -220,7 +220,7 @@ With a permit students are allowed to work up to 20 hours per week (30 hours per
 
 <footer><p>
 
-20.09.20.<br> Wint
+20.09.21.<br> Wint
 
 </p>
 
