--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ html{font-family: 'Noto Serif KR', serif;}
 
 body,h1,h2,p{margin:0;}
 
-img{display:block;width: 100%}
+img{display:block;width: 80%}
 
 header,section,footer{width:800px;margin:auto;}
 
@@ -49,7 +49,7 @@ p{margin-top: 20px}
 
  
 
-body{border:150px solid pink;
+body{border:100px solid pink;
 
  
 
@@ -220,7 +220,7 @@ With a permit students are allowed to work up to 20 hours per week (30 hours per
 
 <footer><p>
 
-20.09.21.<br> Wint
+20.09.21 <br> Wint
 
 </p>
 
