--- a/index.html
+++ b/index.html
@@ -92,17 +92,14 @@ There are also a lot of practical factors that make studying in Korea a great ch
 
 Korean Language Program application
 Application Procedures:
+
  <ul>
   <li>1. Application submission deadline: 1-3 months prior to the start date</li>
   <li>2. Application screening</li>
   <li>3. Tuition fee payment</li>
-</ul>
-
-3. Tuition fee payment
-
-4. Admission approval
-
-5. Visa application
+  <li>4. Admission approval</li>
+  <li>5. Visa application</li>
+  </ul>
 
 Example of Admission documents:
 
