--- a/index.html
+++ b/index.html
@@ -102,20 +102,15 @@ Application Procedures:
   </ul>
 
 Example of Admission documents:
-
-1. Application form
-
-2. Passport copy and profile photo
-
-3. Bank statement  (US$ 9,000 or more)
-
-4. Diploma / degree copy of the highest level education
-
-5. A personal statement
-
-6. Proof of Foreign student insurance
-
-7. Application fee
+  <ul> 
+  <li>1. Application form</li>
+  <li>2. Passport copy and profile photo</li>
+  <li>3. Bank statement  (US$ 9,000 or more)</li>
+  <li>4. Diploma / degree copy of the highest level education</li>
+  <li>5. A personal statement</li>
+  <li>6. Proof of Foreign student insurance</li>
+  <li>7. Application fee</li>
+  </ul>
 
 University program application
 Application Procedures:
