--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ h2{margin-top: 30px; margin-bottom: 30px; font-size: 2em}
 
 section p{line-height: 1.5}
 
-section p{text-align: center;}
+section p{text-align: right;}
 
 footer{height: 200px; font-size: 0.5em}
 
