--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@ body{border:80px solid pink;
 </header>
 
 <section>
-
+  <p> Hi! My name is Wint and I amm from Myanmar. I am now studying in SeoulTech University in Korea. I want to share the important facts about study in Korea. I hope all of foreign students can study comfortably in Korea.
+   </p>
+ 
 <h2>1. Reasons</h2>
   <img src="1.png">
   <p>During the last ten years, Korea has become one of the most popular destinations for international students studying in Asia. It is attractive, trendy, and has a lot for a newcomer to indulge in and explore. 
