--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h1{padding-top: 30px; }
 
 header{margin-bottom: 400px}
 
-section{margin-bottom: 300px}
+section{margin-bottom: 350px}
 
 h2{margin-top: 30px; margin-bottom: 30px; font-size: 2em}
 
@@ -68,14 +68,11 @@ body{border:80px solid pink;
 
 <header>
 
-<h1>Study in Korea <br>Why study in Korea? 
-
-</h1>
-
+<h1>Study in Korea <br>Why study in Korea? </h1>
 </header>
 
 <section>
-  <p> Hi! My name is Wint and I amm from Myanmar. I am now studying in SeoulTech University in Korea. I want to share the important facts about study in Korea. I hope all of foreign students can study comfortably in Korea.
+  <p> Hi! My name is Wint and I am from Myanmar. I am now studying in SeoulTech University in Korea. I want to share the important facts about study in Korea. I hope all of foreign students can study comfortably in Korea.
    </p>
  
 <h2>1. Reasons</h2>
