--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body{border:80px solid pink;
 
 <h1>Study in Korea <br>Why study in Korea? </h1>
 </header>
-
+<img src="7.jpg">
 <section>
   <p> Hi! My name is Wint and I am from Myanmar. I am now studying in SeoulTech University in Korea. I want to share the important facts about study in Korea. I hope all of foreign students can study comfortably in Korea.
    </p>
