--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ header{margin-bottom: 400px}
 
 section{margin-bottom: 400px}
 
-h2{margin-top: 30px; margin-bottom: 30px; font-size: 2em}
+h2{padding-top: 30px; margin-bottom: 30px; font-size: 2em}
 
 section p{line-height: 1.5}
 
