--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ header{margin-bottom: 400px}
 
 section{margin-bottom: 400px}
 
-h2{padding-top: 30px; margin-bottom: 30px; font-size: 2em}
+h2{margin-top: 30px; margin-bottom: 30px; font-size: 2em}
 
 section p{line-height: 1.5}
 
@@ -70,7 +70,6 @@ body{border:80px solid pink;
 
 <h1>Study in Korea <br>Why study in Korea? </h1>
 </header>
-
 <section>
   <p> Hi! My name is Wint and I am from Myanmar. I am now studying in SeoulTech University in Korea. I want to share the important facts about study in Korea. I hope all of foreign students can study comfortably in Korea.
    </p>
@@ -80,11 +79,8 @@ body{border:80px solid pink;
   <p>During the last ten years, Korea has become one of the most popular destinations for international students studying in Asia. It is attractive, trendy, and has a lot for a newcomer to indulge in and explore. 
 
 There are also a lot of practical factors that make studying in Korea a great choice: living costs are cheaper than in many other developed countries, the tuition fees are reasonable and affordable. With its economic and political upheaval, modernized Korea is famous for its good quality of education and a high standard of health care. It is a safe and secure country with good travel connections to neighboring countries. Trips to China, Japan, and the rest of Asia on weekends or holidays add more perspective to the experience of living and studying in Korea. </p>
-
 </section>
-
 <section>
-
 <h2>2. When and How to Apply University for foreigners ? </h2>
  <img src="2.png">
 <p>Most universities recruit twice a year, 4 months prior to the commencement of the semester for university courses. Language course applications are usually more flexible, starting quarterly or even more frequently with simpler application procedures. There is no central admission authority in Korea, so each school set their own deadlines, which can be found on the school’s homepage.
