--- a/index.html
+++ b/index.html
@@ -109,36 +109,27 @@ Example of Admission documents:
 
 University program application
 Application Procedures:
-
-1. Application submission deadline: 4 - 5 months prior (October for Spring Semester, April for Fall Semester)
-
-2. Audition and Interview
-
-3. Admission result notification
-
-4. Tuition fee payment
-
-5. Letter of Admission Issuance
-
-6. Visa application
+<ul>
+<li>1. Application submission deadline: 4 - 5 months prior (October for Spring Semester, April for Fall Semester)</li>
+<li>2. Audition and Interview</li>
+<li>3. Admission result notification</li>
+<li>4. Tuition fee payment</li>
+<li>5. Letter of Admission Issuance</li>
+<li>6. Visa application</li>
+</ul>
 
 Example of Admission documents:
-
-1. University application form
-
-2. Financial support documents including bank certificate, guarantee of finance
-
-3. Academic support documents
-
-1. Statement of purpose
-
-2. Official high school (highest level of education) diploma (translated and notarized)
-
-3. Official high school (highest level of education) transcript (translated and notarized)
-
-4. Original document for proof of language proficiency (English / Korean)
-
-4. Identification support document: passport copy, household registry certificate</p>
+<ul>
+<li>1. University application form</li>
+<li>2. Financial support documents including bank certificate, guarantee of finance</li>
+<li>3. Academic support documents</li>
+<li>4. Statement of purpose</li>
+<li>5. Official high school (highest level of education) diploma (translated and notarized)</li>
+<li>6. Official high school (highest level of education) transcript (translated and notarized)</li>
+<li>7. Original document for proof of language proficiency (English / Korean)</li>
+<li>8. Identification support document: passport copy, household registry certificate </li>
+ </ul>
+ </p>
 
 </section>
 
@@ -191,11 +182,13 @@ With a permit students are allowed to work up to 20 hours per week (30 hours per
 
 <img src="6.png">
 
-<p> 1.Find a suitable school in Korea. We recommend that you start by learning Korean language if you want to study in Korea for a longer period of time, even if you want to take a degree program that is primarily taught in English. Learning Korean is the key to enjoy and succeed in your life in Korea.
-
-2. Travel and arrive in Korea.
-
-3. Enjoy your studies in Korea. Be prepared for an initial culture shock. So stay calm and open minded, explore and enjoy!
+<p> 
+ <ul>
+  <li>1.Find a suitable school in Korea. We recommend that you start by learning Korean language if you want to study in Korea for a longer period of time, even if you want to take a degree program that is primarily taught in English. Learning Korean is the key to enjoy and succeed in your life in Korea.
+</li>
+  <li>2. Travel and arrive in Korea.</li>
+  <li>3. Enjoy your studies in Korea. Be prepared for an initial culture shock. So stay calm and open minded, explore and enjoy!</li>
+ </ul>
 
 </p>
 
