--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@ h2{margin-top: 30px; margin-bottom: 30px; font-size: 2em}
 
 section p{line-height: 1.5}
 
-section p{text-align: left; test-align:justify; 
- text-justify: inter-word;}
+ section p{text-align: left;}
+ div { 
+ test-align:justify; 
+ text-justify: inter-word;
+ }
 
 
 footer{height: 200px; font-size: 0.5em}
