--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@ h2{margin-top: 30px; margin-bottom: 30px; font-size: 2em}
 
 section p{line-height: 1.5}
 
- section p{text-align: left;}
- div { 
- test-align:justify; 
+section p{text-align: justify;
  text-justify: inter-word;
  }
 
