--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ There are also a lot of practical factors that make studying in Korea a great ch
 </section>
 <section>
 <h2>2. When and How to Apply University for foreigners ? </h2>
- <img src="8.png">
+ <img src="2.jpg">
 <p>Most universities recruit twice a year, 4 months prior to the commencement of the semester for university courses. Language course applications are usually more flexible, starting quarterly or even more frequently with simpler application procedures. There is no central admission authority in Korea, so each school set their own deadlines, which can be found on the school’s homepage.
 
 Korean Language Program application
