--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Example of Admission documents:
 
 <h2>4. Part-time Jobs</h2>
 
-<img src="4.png">
+<img src="4.jpg">
 
 <p>To work part-time in Korea international students on a student visa must apply for a permission for certain extracurricular activity from the immigration service. Students in language courses cannot apply for it until after 6 months of study. Official approval from your school is necessary apply for the work permit.
 
