--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ section p{text-align: justify;
  }
 
 
-footer{height: 200px; font-size: 1em}
+footer{height: 200px; font-size: 0.8em}
 
 footer p{text-align: right;}
 
@@ -170,7 +170,7 @@ With a permit students are allowed to work up to 20 hours per week (30 hours per
 
 <h2>5.Scholarships </h2>
 
-<img src="5.png">
+<img src="5.jpg">
 
 ·  <p>Scholarships in universities: it is hard to get scholarships for language courses or study abroad semesters in Korea but many universities offer some kind of scholarship opportunities for international students attending their degree programs. These scholarships are usually based on academic performance. For example our partner Konkuk University offer scholarships based on your TOPIK-result on the first semester of their degree programs. You get a 30% tuition fee scholarship if you have achieved TOPIK level 3, and the scholarship increase with 10% for every higher TOPIK level, up to 60% of the tuition fee for TOPIK 6. From the second semester and onwards, they offer scholarships from 20% to 100% of the tuition fee to students with a GPA between 3 and 4 from their previous semester.
 
@@ -183,7 +183,7 @@ With a permit students are allowed to work up to 20 hours per week (30 hours per
 <section>
 <h2>6. How to study in Korea? </h2>
 
-<img src="6.png">
+<img src="6.jpg">
 
 <p> 
  <ul>
